# EDFbrowser-CMake

./: CMakeLists.txt  EDFbrowser.icns  Info.plist.in  README.md  check_edf_file.cpp  export_filtered_signals.cpp  export_filtered_signals.h  signals_dialog.cpp  signals_dialog.h  viewbuf.cpp
